test/corpus/constant_declarations.txt
================================================================================
Global constant declaration
================================================================================

Foobar: untyped

--------------------------------------------------------------------------------

(program
  (declaration
    (constant_declaration
      (constant)
      (type
        (builtin_type)))))

================================================================================
Nested global constant declaration (invalid)
================================================================================

Foo::Bar::Baz: untyped

--------------------------------------------------------------------------------

(program
  (ERROR)
  (declaration
    (constant_declaration
      (constant)
      (type
        (builtin_type)))))
